[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raftup"
version = "0.1.0"
description = "RAFT-UP: Robust Alignment for Spatial Transcriptomics under Partial Overlapping"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "RAFT-UP developers"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
